--- a/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap1.html
+++ b/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap1.html
@@ -36,8 +36,7 @@
             <div id="search">
                 <input id="searchBar" type="search" placeholder="Search...">
                 <label for="searchBar">
-                    <img 
-src="../../images/iconos/lupa.png" alt="">
+                    <img src="../../images/iconos/lupa.png" alt="">
                 </label>
 
                 </a>
@@ -55,10 +54,7 @@ src="../../images/iconos/lupa.png" alt="">
                 <!-- Avatar -->
                 <section class="avatar">
                     <p>Kai</p>
-                    <img 
-src="../../images/iconos/userAvatar.jpg"
-
- alt="">
+                    <img src="../../images/iconos/userAvatar.jpg" alt="">
                 </section>
 
                 <li><a href="#">Perfil</a></li>
@@ -81,32 +77,35 @@ src="../../images/iconos/userAvatar.jpg"
             <a class="atras" href="cap2.html"><i class="fa-solid fa-forward"></i></a>
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
-        <!-- https://mangapark.net/ -->
-        <!-- https://heavenmanga.com/ -->
 
-        <img class="pagina" id="arriba" src="https://cdn.statically.io/img/cdn.leercapitulo.com/ce717779cef18a353934813bce703f31873e8/c87323ece8131353981ce74ce74fc7e79c270/7577747ff1ce15ce1a15c2151317131a151a1/c1a1bc93d8a38c9151317131c1c/1315141f.jpg" alt="">
-        <img class="pagina" src="https://cdn.statically.io/img/cdn.leercapitulo.com/ce717779cef18a353934813bce703f31873e8/c87323ece8131353981ce74ce74fc7e79c270/7577747ff1ce15ce1a1cc2151317131a151a1/c1a1bc93d8a38c9151317131c1c/1315141f.jpg" alt="">
-        <img class="pagina" src="https://cdn.statically.io/img/cdn.leercapitulo.com/ce717779cef18a353934813bce703f31873e8/c87323ece8131353981ce74ce74fc7e79c270/7577747ff1ce15ce1a11c2151317131a151a1/c1a1bc93d8a38c9151317131c1c/1315141f.jpg" alt="">
-        <img class="pagina" src="https://cdn.statically.io/img/cdn.leercapitulo.com/ce717779cef18a353934813bce703f31873e8/c87323ece8131353981ce74ce74fc7e79c270/7577747ff1ce15ce1a17c2151317131a151a1/c1a1bc93d8a38c9151317131c1c/1315141f.jpg" alt="">
-        <img class="pagina" src="https://cdn.statically.io/img/cdn.leercapitulo.com/ce717779cef18a353934813bce703f31873e8/c87323ece8131353981ce74ce74fc7e79c270/7577747ff1ce15ce1a1fc2151317131a151a1/c1a1bc93d8a38c9151317131c1c/1315141f.jpg" alt="">
-        <img class="pagina" src="https://cdn.statically.io/img/cdn.leercapitulo.com/ce717779cef18a353934813bce703f31873e8/c87323ece8131353981ce74ce74fc7e79c270/7577747ff1ce15ce1a13c2151317131a151a1/c1a1bc93d8a38c9151317131c1c/1315141f.jpg" alt="">
-        <img class="pagina" src="https://cdn.statically.io/img/cdn.leercapitulo.com/ce717779cef18a353934813bce703f31873e8/c87323ece8131353981ce74ce74fc7e79c270/7577747ff1ce15ce1a18c2151317131a151a1/c1a1bc93d8a38c9151317131c1c/1315141f.jpg" alt="">
-        <img class="pagina" src="https://cdn.statically.io/img/cdn.leercapitulo.com/ce717779cef18a353934813bce703f31873e8/c87323ece8131353981ce74ce74fc7e79c270/7577747ff1ce15ce1a1bc2151317131a151a1/c1a1bc93d8a38c9151317131c1c/1315141f.jpg" alt="">
-        <img class="pagina" src="https://cdn.statically.io/img/cdn.leercapitulo.com/ce717779cef18a353934813bce703f31873e8/c87323ece8131353981ce74ce74fc7e79c270/7577747ff1ce15ce1a14c2151317131a151a1/c1a1bc93d8a38c9151317131c1c/1315141f.jpg" alt="">
-        <img class="pagina" src="https://cdn.statically.io/img/cdn.leercapitulo.com/ce717779cef18a353934813bce703f31873e8/c87323ece8131353981ce74ce74fc7e79c270/7577747ff1ce15ce151ac2151317131a151a1/c1a1bc93d8a38c9151317131c1c/1315141f.jpg" alt="">
-        <img class="pagina" src="https://cdn.statically.io/img/cdn.leercapitulo.com/ce717779cef18a353934813bce703f31873e8/c87323ece8131353981ce74ce74fc7e79c270/7577747ff1ce15ce1515c2151317131a151a1/c1a1bc93d8a38c9151317131c1c/1315141f.jpg" alt="">
-        <img class="pagina" src="https://cdn.statically.io/img/cdn.leercapitulo.com/ce717779cef18a353934813bce703f31873e8/c87323ece8131353981ce74ce74fc7e79c270/7577747ff1ce15ce151cc2151317131a151a1/c1a1bc93d8a38c9151317131c1c/1315141f.jpg" alt="">
-        <img class="pagina" src="https://cdn.statically.io/img/cdn.leercapitulo.com/ce717779cef18a353934813bce703f31873e8/c87323ece8131353981ce74ce74fc7e79c270/7577747ff1ce15ce1511c2151317131a151a1/c1a1bc93d8a38c9151317131c1c/1315141f.jpg" alt="">
-        <img class="pagina" src="https://cdn.statically.io/img/cdn.leercapitulo.com/ce717779cef18a353934813bce703f31873e8/c87323ece8131353981ce74ce74fc7e79c270/7577747ff1ce15ce1517c2151317131a151a1/c1a1bc93d8a38c9151317131c1c/1315141f.jpg" alt="">
-        <img class="pagina" src="https://cdn.statically.io/img/cdn.leercapitulo.com/ce717779cef18a353934813bce703f31873e8/c87323ece8131353981ce74ce74fc7e79c270/7577747ff1ce15ce151fc2151317131a151a1/c1a1bc93d8a38c9151317131c1c/1315141f.jpg" alt="">
-        <img class="pagina" src="https://cdn.statically.io/img/cdn.leercapitulo.com/ce717779cef18a353934813bce703f31873e8/c87323ece8131353981ce74ce74fc7e79c270/7577747ff1ce15ce1513c2151317131a151a1/c1a1bc93d8a38c9151317131c1c/1315141f.jpg" alt="">
-        <img class="pagina" src="https://cdn.statically.io/img/cdn.leercapitulo.com/ce717779cef18a353934813bce703f31873e8/c87323ece8131353981ce74ce74fc7e79c270/7577747ff1ce15ce1518c2151317131a151a1/c1a1bc93d8a38c9151317131c1c/1315141f.jpg" alt="">
-        <img class="pagina" src="https://cdn.statically.io/img/cdn.leercapitulo.com/ce717779cef18a353934813bce703f31873e8/c87323ece8131353981ce74ce74fc7e79c270/7577747ff1ce15ce151bc2151317131a151a1/c1a1bc93d8a38c9151317131c1c/1315141f.jpg" alt="">
-        <img class="pagina" src="https://cdn.statically.io/img/cdn.leercapitulo.com/ce717779cef18a353934813bce703f31873e8/c87323ece8131353981ce74ce74fc7e79c270/7577747ff1ce15ce1514c2151317131a151a1/c1a1bc93d8a38c9151317131c1c/1315141f.jpg" alt="">
-        <img class="pagina" src="https://cdn.statically.io/img/cdn.leercapitulo.com/ce717779cef18a353934813bce703f31873e8/c87323ece8131353981ce74ce74fc7e79c270/7577747ff1ce15ce1c1ac2151317131a151a1/c1a1bc93d8a38c9151317131c1c/1315141f.jpg" alt="">
-        <img class="pagina" src="https://cdn.statically.io/img/cdn.leercapitulo.com/ce717779cef18a353934813bce703f31873e8/c87323ece8131353981ce74ce74fc7e79c270/7577747ff1ce15ce1c15c2151317131a151a1/c1a1bc93d8a38c9151317131c1c/1315141f.jpg" alt="">
-        <img class="pagina" src="https://cdn.statically.io/img/cdn.leercapitulo.com/ce717779cef18a353934813bce703f31873e8/c87323ece8131353981ce74ce74fc7e79c270/7577747ff1ce15ce1c1cc2151317131a151a1/c1a1bc93d8a38c9151317131c1c/1315141f.jpg" alt="">
-        <!-- <img class="pagina" src="https://cdn.statically.io/img/cdn.leercapitulo.com/ce717779cef18a353934813bce703f31873e8/c87323ece8131353981ce74ce74fc7e79c270/7577747ff1ce15ce1c11c2151317131a151a1/c1a1bc93d8a38c9151317131c1c/1315141f.jpg" alt=""> -->
+        <!-- eliminar        -->
+
+        <img class="pagina" id="arriba" src="https://es6.movietop.cc/es_manga/pic5/2/28546/757096/37588c655ca22f7ca1664a2b211188ff.webp?acc=MPawpV9D-QRcUZFgn2EMwg&exp=1678930735"  alt="">
+        <img class="pagina" src="https://es5.movietop.cc/es_manga/pic5/2/28546/757096/98512e599eadddf308d4dfeb48f98005.webp?acc=eKuu-vs2DyDInYn-Eu1h_A&exp=1678930735"  alt="">
+        <img class="pagina" src="https://es6.movietop.cc/es_manga/pic5/2/28546/757096/1ccae08c176dc746f2dae273210caac8.webp?acc=b18OIuAdfnrGtRULkKRwdw&exp=1678930735"  alt="">
+        <img class="pagina" src="https://es2.movietop.cc/es_manga/pic5/2/28546/757096/74fdb1c15266a3dd1cac5ffe1c776cb1.webp?acc=0bdutsRE_jyW6IYdZc7L4w&exp=1678930735"  alt="">
+        <img class="pagina" src="https://es11.movietop.cc/es_manga/pic5/2/28546/757096/acbb442d0145ef4921b6dc5cdde84e5b.webp?acc=KwxVAYpIZOPmE0ttDD7FZg&exp=1678930735"  alt="">
+        <img class="pagina" src="https://es6.movietop.cc/es_manga/pic5/2/28546/757096/7049735575dbfa9c485bf5e48a42d1a7.webp?acc=gjue9wAilq5K6Nh_09uPyQ&exp=1678930735"  alt="">
+        <img class="pagina" src="https://es14.movietop.cc/es_manga/pic5/2/28546/757096/b6b77526860d3c83f1d5b398e5c470b6.webp?acc=zKtNx6v1LCUzHwMr0pV97A&exp=1678930735"  alt="">
+        <img class="pagina" src="https://es3.movietop.cc/es_manga/pic5/2/28546/757096/35109f5ad05b4af6bf2f9279ef9d145c.webp?acc=VcpTQrxPkhUIcAihn4ni_A&exp=1678930735"  alt="">
+        <img class="pagina" src="https://es12.movietop.cc/es_manga/pic5/2/28546/757096/0fcee95cc7b4f2067da8ba1e330de18e.webp?acc=FBePKa6gOcfOyIdoxHmtrA&exp=1678930735"  alt="">
+        <img class="pagina" src="https://es13.movietop.cc/es_manga/pic5/2/28546/757096/50c1f44e426560f3f2cdcb3e19e39903.webp?acc=2UZjdSwF90xn1ElH9wh_6A&exp=1678930735"  alt="">
+
+        <img class="pagina" src="https://es8.movietop.cc/es_manga/pic5/2/28546/757096/2ac3f5bda12ef7f3529d24c137bc5384.webp?acc=bTdHgfkwGI9fF2prDwwMlQ&exp=1678931965" alt="">
+        <img class="pagina" src="https://es2.movietop.cc/es_manga/pic5/2/28546/757096/7c2298145b05dcbb16dac39a625011c4.webp?acc=aTW30rLDPlgBgMCvwndMdQ&exp=1678931965" alt="">
+        <img class="pagina" src="https://es3.movietop.cc/es_manga/pic5/2/28546/757096/50ea1636e50827e1b999f0dc5fa06214.webp?acc=6yDgsz58w9nMT0AnHSbQ1w&exp=1678931965" alt="">
+        <img class="pagina" src="https://es3.movietop.cc/es_manga/pic5/2/28546/757096/e74186a9024394af6d13cb98b343f11a.webp?acc=DxSPQ-HXqevGf6WS1S1yKg&exp=1678931965" alt="">
+        <img class="pagina" src="https://es7.movietop.cc/es_manga/pic5/2/28546/757096/0ff42c6eb46e807a4a8d92264e5bdfa1.webp?acc=i6AC6alg5QQ72rW33CMvVA&exp=1678931965" alt="">
+        <img class="pagina" src="https://es8.movietop.cc/es_manga/pic5/2/28546/757096/4ab1f4bb9cff4e8dc851f9e5314e41f9.webp?acc=2UIvM4_1lx_xMYwItdtn6A&exp=1678931965" alt="">
+        <img class="pagina" src="https://es8.movietop.cc/es_manga/pic5/2/28546/757096/2ffc298f0ee58536c92fc5cc8a0c22da.webp?acc=wydqtPLbbygOM_XLl4V-TA&exp=1678931965" alt="">
+        <img class="pagina" src="https://es5.movietop.cc/es_manga/pic5/2/28546/757096/92ae4a64aa9e157ff3b6296275c60202.webp?acc=5hFywDPE7gI7gY5KNQcIeA&exp=1678931965" alt="">
+        <img class="pagina" src="https://es2.movietop.cc/es_manga/pic5/2/28546/757096/26985dac2e537cd9deb67d96c962b4a1.webp?acc=L4TUtJbvMp0nkqtFDrwqgg&exp=1678931965" alt="">
+        <img class="pagina" src="https://es7.movietop.cc/es_manga/pic5/2/28546/757096/94c0915ab3bcbc61c1c61624dd6d7cd5.webp?acc=kbOZaYHsgfw7AsSkMdCuiw&exp=1678931965" alt="">
+
+        <img class="pagina" src="https://es3.movietop.cc/es_manga/pic5/2/28546/757096/78434f3b63efa331e51d1e41dd47cfb0.webp?acc=QwOLesk6PLgzhdPzspcRIw&exp=1678931965" alt="">
+        <img class="pagina" src="https://es13.movietop.cc/es_manga/pic5/2/28546/757096/14455a4dee32fb0787bc586bec8eb582.webp?acc=4Kqizd4kLNZC3ADl2BL-PA&exp=1678931965" alt="">
+        <img class="pagina" src="https://es10.movietop.cc/es_manga/pic5/2/28546/757096/8bb6fe84b8bba85343f415936f15e878.webp?acc=JMLJYe_cECL96af6OgU7gA&exp=1678931965" alt="">
+
     </main>
 
     <!-- Footer pag sim -->
