--- a/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap10.html
+++ b/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap10.html
@@ -78,31 +78,19 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/10/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/10/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/10/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/10/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/10/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/10/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/10/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/10/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/10/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/10/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/10/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/10/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/10/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/10/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/10/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/10/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/10/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/10/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/10/19.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/10/20.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/10/21.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/10/22.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/10/23.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/10/24.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/10/25.jpg" alt="">
+        <img class="pagina" id="arriba" src="https://es15.movietop.cc/es_manga/pic5/2/28546/758316/5d3a63228a98ae54aaecff74e0d32577.webp?acc=8qlSxZK39QrO6Z0HhrdjOw&exp=1678934558" alt="">
+        <img class="pagina" src="https://es7.movietop.cc/es_manga/pic5/2/28546/758316/9c93b656c01e1a8959317dceac939239.webp?acc=cU4NX8nxPS8W57i2mCjubA&exp=1678934558" alt="">
+        <img class="pagina" src="https://es5.movietop.cc/es_manga/pic5/2/28546/758316/d9b344c68f983c6f45f6898c8b9a2ab8.webp?acc=ybY1vH2MtcKXxqZyjKRGtA&exp=1678934558" alt="">
+        <img class="pagina" src="https://es12.movietop.cc/es_manga/pic5/2/28546/758316/31c8bb8ef285c1b526508682a4f6c34d.webp?acc=izKnxV2HHQ2Hbmua51rTUg&exp=1678934558" alt="">
+        <img class="pagina" src="https://es11.movietop.cc/es_manga/pic5/2/28546/758316/fd5513c31d9e91876987ca20d46264a4.webp?acc=7hZaVYiendLtkW3uC-xMjw&exp=1678934558" alt="">
+        <img class="pagina" src="https://es5.movietop.cc/es_manga/pic5/2/28546/758316/62afbc57ab75791a38f7d727efa90fc7.webp?acc=T4sapCOWFFZqCiMms4fsmg&exp=1678934558" alt="">
+        <img class="pagina" src="https://es3.movietop.cc/es_manga/pic5/2/28546/758316/ac91369bb37228bf2da3b201f0821907.webp?acc=eVAqs5iSImZWD_vCToMdJg&exp=1678934558" alt="">
+        <img class="pagina" src="https://es4.movietop.cc/es_manga/pic5/2/28546/758316/ab696d49e44b85e99fde42c9a2bd76f1.webp?acc=Hv0RrJ4VGvcWvAaTtv6Wag&exp=1678934558" alt="">
+        <img class="pagina" src="https://es2.movietop.cc/es_manga/pic5/2/28546/758316/f4090fef41318c3ac8a06b806526ab0e.webp?acc=eXFLNPMqMFYZJLrnjEJpVA&exp=1678934558" alt="">
+        <img class="pagina" src="https://es8.movietop.cc/es_manga/pic5/2/28546/758316/1de6c74e347052d6f145ad434acdc86f.webp?acc=XLcB55yQNiTnb_VfuDKXJw&exp=1678934558" alt="">
+
+        <img class="pagina" src="https://es10.movietop.cc/es_manga/pic5/2/28546/758316/c5eb4987bf9d44097f3ed42e0697a546.webp?acc=N-MXj50pVXAgBCarvcFC_A&exp=1678934558" alt="">
+        <img class="pagina" src="https://es11.movietop.cc/es_manga/pic5/2/28546/758316/76998e410309060ab02d79db38b25454.webp?acc=Ry4ZaIpRlW-g8O3SKoQJog&exp=1678934558" alt="">
         
     </main>
 
