--- a/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap11.html
+++ b/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap11.html
@@ -78,26 +78,16 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/19.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/11/20.jpg" alt="">
+        <img class="pagina" id="arriba" src="https://es15.movietop.cc/es_manga/pic5/2/28546/758481/75ea6c4782bcc53ca0e23347dc0dbbfd.webp?acc=h9CKbsuch3cMtvfonkIzRQ&exp=1678934666" alt="">
+        <img class="pagina" src="https://es14.movietop.cc/es_manga/pic5/2/28546/758481/27a776f3894b8fedae942a6e2ecd8082.webp?acc=R8v5AStWt1gEmSnshP3lQw&exp=1678934666" alt="">
+        <img class="pagina" src="https://es6.movietop.cc/es_manga/pic5/2/28546/758481/69c89914e702d2abe840bd751f5b59c5.webp?acc=AEfb1P0joagd8jqgGuay3w&exp=1678934666" alt="">
+        <img class="pagina" src="https://es6.movietop.cc/es_manga/pic5/2/28546/758481/e70c19ec41e54548db90cb667c4c62fa.webp?acc=IqT9ZHOnDZ9XBgDeWjAaEg&exp=1678934666" alt="">
+        <img class="pagina" src="https://es13.movietop.cc/es_manga/pic5/2/28546/758481/cd3aa67a5247fc2bb69b52a516b2ffa7.webp?acc=Trw7oEjILJsnCcvart_LsQ&exp=1678934666" alt="">
+        <img class="pagina" src="https://es11.movietop.cc/es_manga/pic5/2/28546/758481/6b31c3edc6f41fb1e9f6abcf5828917d.webp?acc=NNcnVn8GP-jHdi8Eb3Ybyg&exp=1678934666" alt="">
+        <img class="pagina" src="https://es11.movietop.cc/es_manga/pic5/2/28546/758481/091bc5440296cc0e41dd60ce22fbaf88.webp?acc=seeiNDpZ6wBccMSLTkAE5w&exp=1678934666" alt="">
+        <img class="pagina" src="https://es8.movietop.cc/es_manga/pic5/2/28546/758481/874c3fedf7af1215b09995064f4d185f.webp?acc=6oyVUqfnqMpI82Z6vSyy7g&exp=1678934666" alt="">
+        <img class="pagina" src="https://es15.movietop.cc/es_manga/pic5/2/28546/758481/924a069b71841bf9163650ddc7be101a.webp?acc=IXcKNPHOFbsi-ck3HBLPPA&exp=1678934666" alt="">
+        <img class="pagina" src="https://es11.movietop.cc/es_manga/pic5/2/28546/758481/1d28bad27dfe46d8dfb0ec541b82b057.webp?acc=g9QKXmfVMGcE_Rzsw12LlQ&exp=1678934666" alt="">
     </main>
 
     <!-- Footer pag sim -->
