--- a/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap12.html
+++ b/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap12.html
@@ -78,29 +78,21 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/19.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/20.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/21.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/22.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/12/23.jpg" alt="">
+        <img class="pagina" id="arriba" src="https://es11.movietop.cc/es_manga/pic5/2/28546/758641/02b90701612e92d91d4f7f367cd52a6a.webp?acc=9eZamjWmmKkplq9yq6HnXQ&exp=1678934738" alt="">
+        <img class="pagina" src="https://es7.movietop.cc/es_manga/pic5/2/28546/758641/4320755a49efb20bbca206e4fea57140.webp?acc=EkXWCib4yk6zsTT9KHI8_w&exp=1678934738" alt="">
+        <img class="pagina" src="https://es2.movietop.cc/es_manga/pic5/2/28546/758641/85eecf84d689d21fa27283a1a61be979.webp?acc=Sx0py42wkmIzbGiES4OIng&exp=1678934738" alt="">
+        <img class="pagina" src="https://es6.movietop.cc/es_manga/pic5/2/28546/758641/b600b4a38eec82f70918b605343a6dea.webp?acc=gR-9ZEZ9Q0RMDp223-99vA&exp=1678934738" alt="">
+        <img class="pagina" src="https://es9.movietop.cc/es_manga/pic5/2/28546/758641/af3fd5c5ee075c3b22c7cc2175d85e5a.webp?acc=jNxgqVqhPI5vaCkVwncZdw&exp=1678934738" alt="">
+        <img class="pagina" src="https://es12.movietop.cc/es_manga/pic5/2/28546/758641/be2faf860bf38515fef037744ccb0cb8.webp?acc=uLObJy0TnQxaDeHpJXurCQ&exp=1678934738" alt="">
+        <img class="pagina" src="https://es2.movietop.cc/es_manga/pic5/2/28546/758641/37836091f56fa1178678c1cad54e775c.webp?acc=Npux3TsIohLZ1Vjaa8KgOw&exp=1678934738" alt="">
+        <img class="pagina" src="https://es13.movietop.cc/es_manga/pic5/2/28546/758641/a7dc07edeca4a16b2b8e0eaae142415d.webp?acc=5noVIK8ZRVjOC_KSs79Z1A&exp=1678934738" alt="">
+        <img class="pagina" src="https://es8.movietop.cc/es_manga/pic5/2/28546/758641/4ee8ca7221edcc2b35ec18f8b251e4fd.webp?acc=2Oc0DNZsVgl8IqOdNXfFVw&exp=1678934738" alt="">
+        <img class="pagina" src="https://es9.movietop.cc/es_manga/pic5/2/28546/758641/120550751e6ee8a5d832a15bd7a90a69.webp?acc=3-ZYa-hOBeNmpUYXIwk7zw&exp=1678934738" alt="">
+
+        <img class="pagina" src="https://es8.movietop.cc/es_manga/pic5/2/28546/758641/8b0b75250ce540fe02549674cbe42a5d.webp?acc=98GSrgbutmxzumfHktTK_Q&exp=1678934738" alt="">
+        <img class="pagina" src="https://es11.movietop.cc/es_manga/pic5/2/28546/758641/300f2e764e3286ecdf4ed130df6d47f5.webp?acc=fDK89Lt2PTRG7Hzf6XmfWg&exp=1678934738" alt="">
+
+        <img class="pagina" src="" alt="">
     </main>
 
     <!-- Footer pag sim -->
