--- a/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap13.html
+++ b/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap13.html
@@ -78,26 +78,18 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/13/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/13/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/13/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/13/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/13/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/13/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/13/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/13/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/13/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/13/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/13/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/13/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/13/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/13/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/13/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/13/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/13/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/13/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/13/19.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/13/20.jpg" alt="">
+        <img class="pagina" id="arriba" src="https://es10.movietop.cc/es_manga/pic5/2/28546/758787/c5ba6c2c3073e705c04fab652e3482f3.webp?acc=IGlH2U8bbaQmijMMt7TipQ&exp=1678934839" alt="">
+        <img class="pagina" src="https://es14.movietop.cc/es_manga/pic5/2/28546/758787/b0c7f60cbb73155ae6bf42fce5422dfc.webp?acc=ksdIHKxiLW4GqkZkHyDiGA&exp=1678934839" alt="">
+        <img class="pagina" src="https://es4.movietop.cc/es_manga/pic5/2/28546/758787/44cd8f14e89c775c390d2d282735057a.webp?acc=WmrW6TN96duZ9ne2X6BHFA&exp=1678934839" alt="">
+        <img class="pagina" src="https://es3.movietop.cc/es_manga/pic5/2/28546/758787/ccda428c489a0d3bf7a1b8c432b535cf.webp?acc=kCCtqBKUWQCXsT4pywcShA&exp=1678934839" alt="">
+        <img class="pagina" src="https://es6.movietop.cc/es_manga/pic5/2/28546/758787/7c4ede33a62160a19586f6e26eaefacf.webp?acc=MN37SuYSeBANzsILxbHmVg&exp=1678934839" alt="">
+        <img class="pagina" src="https://es14.movietop.cc/es_manga/pic5/2/28546/758787/6d4a572abce433d766ecedfc29d769c2.webp?acc=fX7QFG-DZUM48EXusM6uJg&exp=1678934839" alt="">
+        <img class="pagina" src="https://es8.movietop.cc/es_manga/pic5/2/28546/758787/a4df48d0b71376788fee0b92746fd7d5.webp?acc=YW2EK1GeWFm53dVBkbtK7w&exp=1678934839" alt="">
+        <img class="pagina" src="https://es15.movietop.cc/es_manga/pic5/2/28546/758787/469d2be1e07839d5ae29f91a7203491a.webp?acc=ijnGySFmSsFQwN9pdDRXAw&exp=1678934839" alt="">
+        <img class="pagina" src="https://es5.movietop.cc/es_manga/pic5/2/28546/758787/0a90f7a282cb9ca9d753f9d450ebc162.webp?acc=ou0hYsZvQ_aXRboGowcNGg&exp=1678934839" alt="">
+        <img class="pagina" src="https://es4.movietop.cc/es_manga/pic5/2/28546/758787/2a5edea44bce7800c59200cd36f80736.webp?acc=B97jN_TKTSATIyt1k_6WRQ&exp=1678934839" alt="">
+
+        <img class="pagina" src="https://es10.movietop.cc/es_manga/pic5/2/28546/758787/cd10c7f376188a4a2ca3e8fea2c03aeb.webp?acc=RjFDVkj4JUbbHrBPn37joA&exp=1678934839" alt="">
     </main>
 
     <!-- Footer pag sim -->
