--- a/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap14.html
+++ b/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap14.html
@@ -78,25 +78,18 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/14/19.jpg" alt="">
+        <img class="pagina" id="arriba" src="https://es13.movietop.cc/es_manga/pic5/2/28546/758970/0d177795d4eb08f8ad8de5b2dab96138.webp?acc=tV5zehcKGUvJfXKPbTQlug&exp=1678934934" alt="">
+        <img class="pagina" src="https://es13.movietop.cc/es_manga/pic5/2/28546/758970/ffd45a84a9db1246feea09dbfd815589.webp?acc=bb0RoFe1jkcngKcQ9akkQA&exp=1678934934" alt="">
+        <img class="pagina" src="https://es5.movietop.cc/es_manga/pic5/2/28546/758970/372fd987ae6e6c94ea921ffefe33668f.webp?acc=VXXvwObKunXsWGWGKRShMA&exp=1678934934" alt="">
+        <img class="pagina" src="https://es5.movietop.cc/es_manga/pic5/2/28546/758970/3e0cb8f5570b4c38bd5790414ec5a21e.webp?acc=BKaQjE2f7_PqjlK6jS3sSg&exp=1678934934" alt="">
+        <img class="pagina" src="https://es6.movietop.cc/es_manga/pic5/2/28546/758970/0be77dd17d95207f515c6d0e47fffdba.webp?acc=aeFTatFS8MNfrWHym2KvWA&exp=1678934934" alt="">
+        <img class="pagina" src="https://es4.movietop.cc/es_manga/pic5/2/28546/758970/fd4b6debb021b6e14c908031985449b8.webp?acc=CsaRLO8a-Oz9-wu7JQp_pA&exp=1678934934" alt="">
+        <img class="pagina" src="https://es3.movietop.cc/es_manga/pic5/2/28546/758970/4bd0f9d560e56b1fdc9972b54afa564c.webp?acc=gOlkAN5zopyLEKbCzt1iqg&exp=1678934934" alt="">
+        <img class="pagina" src="https://es13.movietop.cc/es_manga/pic5/2/28546/758970/f026a5be7e03bd0816d98a536430e80e.webp?acc=rd3UF6-pTIZUVJkZwfWakw&exp=1678934934" alt="">
+        <img class="pagina" src="https://es10.movietop.cc/es_manga/pic5/2/28546/758970/cfcb3e89376d2e9eebbbb5e643998d8c.webp?acc=92iC8wr_c1N4nZ4G9J4NRA&exp=1678934934" alt="">
+        <img class="pagina" src="https://es14.movietop.cc/es_manga/pic5/2/28546/758970/301133574369fddf226e7473087a0485.webp?acc=CBUnscX0kSCJMM2HAbMFFQ&exp=1678934934" alt="">
+
+        <img class="pagina" src="https://es2.movietop.cc/es_manga/pic5/2/28546/758970/59354f10b7410ff22c094e9706fb63a7.webp?acc=QvZqFNwdzZk9dcCIV6HeYg&exp=1678934934" alt="">
     </main>
 
     <!-- Footer pag sim -->
