--- a/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap15.html
+++ b/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap15.html
@@ -78,26 +78,18 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/15/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/15/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/15/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/15/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/15/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/15/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/15/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/15/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/15/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/15/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/15/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/15/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/15/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/15/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/15/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/15/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/15/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/15/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/15/19.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/15/20.jpg" alt="">
+        <img class="pagina" id="arriba" src="https://es5.movietop.cc/es_manga/pic5/2/28546/759203/e21fbb46105c5238f41b8184125658ad.webp?acc=xm-jX7rxPaVEre8uVvKFqA&exp=1678935010" alt="">
+        <img class="pagina" src="https://es5.movietop.cc/es_manga/pic5/2/28546/759203/59a3c5594e8dbf15165b028717b34372.webp?acc=pim8JOxNCHS6eNgttl_SZA&exp=1678935010" alt="">
+        <img class="pagina" src="https://es12.movietop.cc/es_manga/pic5/2/28546/759203/9cdb4000a2c0e308cd60aaa1cc1255e8.webp?acc=iiNZfHnKrc9Pi64yML0Wvg&exp=1678935010" alt="">
+        <img class="pagina" src="https://es10.movietop.cc/es_manga/pic5/2/28546/759203/c0daa585594b41bea3aeaf7af2a12e29.webp?acc=2zijWUBKIut0q0wWftxMeA&exp=1678935010" alt="">
+        <img class="pagina" src="https://es14.movietop.cc/es_manga/pic5/2/28546/759203/571dea3eb9d4d24c6194ef17c91cda79.webp?acc=73apZC5Te-qo47_MZVxTNg&exp=1678935010" alt="">
+        <img class="pagina" src="https://es6.movietop.cc/es_manga/pic5/2/28546/759203/398b98b77e0c7a4c313abc6e47fb273b.webp?acc=BHL59R_LVKOb6S1Q1dsZ_g&exp=1678935010" alt="">
+        <img class="pagina" src="https://es5.movietop.cc/es_manga/pic5/2/28546/759203/98be175f18ff12118f056c7e448ade23.webp?acc=OcBnZ3ttEdZtxkCGDlnJ6w&exp=1678935010" alt="">
+        <img class="pagina" src="https://es11.movietop.cc/es_manga/pic5/2/28546/759203/85493640a07dd9d8ba3dd85a331ce1c9.webp?acc=SHp6I6a_sNOKU3gJrtnTtA&exp=1678935010" alt="">
+        <img class="pagina" src="https://es5.movietop.cc/es_manga/pic5/2/28546/759203/0c1974b548f16f787c3d9fa087ebd333.webp?acc=OT6gZh8M_q7mtrjbKNo_VQ&exp=1678935010" alt="">
+        <img class="pagina" src="https://es14.movietop.cc/es_manga/pic5/2/28546/759203/28ce9bc954876829eeb56ff46da8e1ab.webp?acc=lT9JnHBpLxExxZdWF9rCXw&exp=1678935010" alt="">
+
+        <img class="pagina" src="https://es15.movietop.cc/es_manga/pic5/2/28546/759203/e14601b19b804b49c4022a1dd205554e.webp?acc=aaYdkwQ1BVD5pUw9KVpmWQ&exp=1678935010" alt="">
     </main>
 
     <!-- Footer pag sim -->
