--- a/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap17.html
+++ b/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap17.html
@@ -78,33 +78,18 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/19.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/20.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/21.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/22.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/23.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/24.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/25.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/26.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/17/27.jpg" alt="">
+        <img class="pagina" id="arriba" src="https://es14.movietop.cc/es_manga/pic5/2/28546/759464/53e2efef8b2c6ee3511b8a9d51289fb6.webp?acc=VMyO4lKUvRH7qdyt6P9vkg&exp=1678935214" alt="">
+        <img class="pagina" src="https://es9.movietop.cc/es_manga/pic5/2/28546/759464/c14c96851ed657b8510e02b8d9b534bc.webp?acc=WqZPXQpcWmifnDDLRZ26Hg&exp=1678935214" alt="">
+        <img class="pagina" src="https://es14.movietop.cc/es_manga/pic5/2/28546/759464/918b69ec3f995b4a6f804b03839f704f.webp?acc=hw0M8ksFXFgiagIUT72Abg&exp=1678935214" alt="">
+        <img class="pagina" src="https://es7.movietop.cc/es_manga/pic5/2/28546/759464/3d47cfcbeb05718274c74e0bf12768b1.webp?acc=Afc2xn8qkwH5cZHr_2TC1Q&exp=1678935214" alt="">
+        <img class="pagina" src="https://es11.movietop.cc/es_manga/pic5/2/28546/759464/ea216c679b6a57e25a1d7063c7b5df4c.webp?acc=buFEjnRPVui-lSq2_C_ZkA&exp=1678935214" alt="">
+        <img class="pagina" src="https://es7.movietop.cc/es_manga/pic5/2/28546/759464/ce1088f5f083f849cfded441f0a38332.webp?acc=sxERf2rxt9ShHLZVw5vQJw&exp=1678935214" alt="">
+        <img class="pagina" src="https://es9.movietop.cc/es_manga/pic5/2/28546/759464/92c0aa24a78d782b9bb04ee38dede147.webp?acc=vf8G1exGbo3ONC_wcshtHA&exp=1678935214" alt="">
+        <img class="pagina" src="https://es3.movietop.cc/es_manga/pic5/2/28546/759464/421b0ea70ab7fd681ae63a8f12695199.webp?acc=V3-3EnqdymkDjxUzsvzA3w&exp=1678935214" alt="">
+        <img class="pagina" src="https://es14.movietop.cc/es_manga/pic5/2/28546/759464/8d59d24b83c4fd89ea2ce4a7644818bd.webp?acc=rf6zFsVgNaUiVrnpFRh_TA&exp=1678935214" alt="">
+        <img class="pagina" src="https://es6.movietop.cc/es_manga/pic5/2/28546/759464/da16202114b72b61f71124a219db6e3e.webp?acc=8OrsczOmBzWkHE6D0FsilA&exp=1678935214" alt="">
+
+        <img class="pagina" src="https://es14.movietop.cc/es_manga/pic5/2/28546/759464/e00121db9ef2b0248aadce5ad04f0e9d.webp?acc=xpktC4TS36gOMno-oOxJJA&exp=1678935214" alt="">
     </main>
 
     <!-- Footer pag sim -->
