--- a/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap18.html
+++ b/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap18.html
@@ -78,32 +78,19 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/18/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/18/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/18/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/18/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/18/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/18/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/18/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/18/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/18/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/18/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/18/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/18/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/18/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/18/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/18/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/18/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/18/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/18/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/18/19.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/18/20.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/18/21.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/18/22.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/18/23.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/18/24.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/18/25.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/18/26.jpg" alt="">
+        <img class="pagina" id="arriba" src="https://es7.movietop.cc/es_manga/pic5/2/28546/759465/814bc5693f1e0f9cc3393e97a1533bf8.webp?acc=NharM5m5H0qSVUKsWFC2Rg&exp=1678935346" alt="">
+        <img class="pagina" src="https://es2.movietop.cc/es_manga/pic5/2/28546/759465/27074a6d2903309a9e4cb18590a711ba.webp?acc=6B6_qFzhj90huvb8ZQ2hGw&exp=1678935346" alt="">
+        <img class="pagina" src="https://es15.movietop.cc/es_manga/pic5/2/28546/759465/583d583ad9ec121c22a60f564d105148.webp?acc=K-ciImBr9kvhd9FEopWGyQ&exp=1678935346" alt="">
+        <img class="pagina" src="https://es10.movietop.cc/es_manga/pic5/2/28546/759465/0384691e7d566f12edd845ac862bd928.webp?acc=6iz5_xI6xTjNtkp1fHw0yw&exp=1678935346" alt="">
+        <img class="pagina" src="https://es15.movietop.cc/es_manga/pic5/2/28546/759465/db5362e819448c35aafb4dc80add9aec.webp?acc=CXIHfqfrikfCAR9h6EKUPQ&exp=1678935346" alt="">
+        <img class="pagina" src="https://es4.movietop.cc/es_manga/pic5/2/28546/759465/ce59ae595b0603be063a5169c69d2243.webp?acc=YgWTN0jWgOd-QJGicvPRXA&exp=1678935346" alt="">
+        <img class="pagina" src="https://es8.movietop.cc/es_manga/pic5/2/28546/759465/12cc669e40278b720c5f1003c85ccaa9.webp?acc=nu3X8mgtipK1PreknHdqGg&exp=1678935346" alt="">
+        <img class="pagina" src="https://es10.movietop.cc/es_manga/pic5/2/28546/759465/ae4c55c9bc47e2156bf63a03ecd9eff1.webp?acc=O6GLMumxQlBpb0b-P_ldgw&exp=1678935346" alt="">
+        <img class="pagina" src="https://es10.movietop.cc/es_manga/pic5/2/28546/759465/2d6c1d880827eda2e2c932abf9a7102f.webp?acc=K-XzEEosUATNZqOh_0Ge7Q&exp=1678935346" alt="">
+        <img class="pagina" src="https://es6.movietop.cc/es_manga/pic5/2/28546/759465/412548fce9a41bc75a620a9bdc11441b.webp?acc=PtQ0WTXqiGgbdOQQpqFTNg&exp=1678935346" alt="">
+
+        <img class="pagina" src="https://es9.movietop.cc/es_manga/pic5/2/28546/759465/55b782d9f1c1765aac3cb3d51aae2430.webp?acc=s5B19kwFhx1u-vYMPiPIaA&exp=1678935346" alt="">
+        <img class="pagina" src="https://es9.movietop.cc/es_manga/pic5/2/28546/759465/fae034d20a4c0184e93c2c5594a934c4.webp?acc=TgBPxWxrJbtkLDsitprFWQ&exp=1678935346" alt="">
     </main>
 
     <!-- Footer pag sim -->
