--- a/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap19.html
+++ b/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap19.html
@@ -78,26 +78,17 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/19.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/19/20.jpg" alt="">
+        <img class="pagina" id="arriba" src="https://es15.movietop.cc/es_manga/pic5/2/28546/759627/5b32eb1adf7d661dfc01777ed24cc7ad.webp?acc=-RBCjnBHKXcvtSVqew4KNg&exp=1678935408" alt="">
+        <img class="pagina" src="https://es14.movietop.cc/es_manga/pic5/2/28546/759627/94ea3badfbb40577d34b1bab56a4b082.webp?acc=hG8hKmzFIe22WjijKC95Cw&exp=1678935408" alt="">
+        <img class="pagina" src="https://es12.movietop.cc/es_manga/pic5/2/28546/759627/2aae855e4fce821396110897f2513c60.webp?acc=TsmayiVTcJvGqwA8xPUP-A&exp=1678935408" alt="">
+        <img class="pagina" src="https://es14.movietop.cc/es_manga/pic5/2/28546/759627/05b58079f17cf5978d55bd3508c1a3a2.webp?acc=uGyQNKE8Mo00RqpiC4sRtA&exp=1678935408" alt="">
+        <img class="pagina" src="https://es5.movietop.cc/es_manga/pic5/2/28546/759627/5396f73303ab2ef13e32735b2181d886.webp?acc=sAd75mFXAEIXt95uxeAIEw&exp=1678935408" alt="">
+        <img class="pagina" src="https://es13.movietop.cc/es_manga/pic5/2/28546/759627/1eb0ed8465bed1ab49e1e465acc30589.webp?acc=joQcyYfv0udUgHuphTJCZA&exp=1678935408" alt="">
+        <img class="pagina" src="https://es4.movietop.cc/es_manga/pic5/2/28546/759627/9d83ecaab703bbfd06d5df223179d175.webp?acc=buSKl2RY-ujwjJgkNBGofQ&exp=1678935408" alt="">
+        <img class="pagina" src="https://es8.movietop.cc/es_manga/pic5/2/28546/759627/4b562e5a92d94dabf8d31fe0395f9e87.webp?acc=xtpM_YouSr_FxOU5CNB4vA&exp=1678935408" alt="">
+        <img class="pagina" src="https://es15.movietop.cc/es_manga/pic5/2/28546/759627/6e57a30d42233829bb65aab0262e463b.webp?acc=wimCNtAvbp9Q5hMWKHn81g&exp=1678935408" alt="">
+        <img class="pagina" src="https://es8.movietop.cc/es_manga/pic5/2/28546/759627/77a30f3aed77aef3d4ed12bf43df6964.webp?acc=aTo3pC_QVh4ukzEO1cU5CQ&exp=1678935408" alt="">
+
     </main>
 
     <!-- Footer pag sim -->
