--- a/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap2.html
+++ b/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap2.html
@@ -78,29 +78,19 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/19.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/20.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/21.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/22.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/23.jpg" alt="">
+        <img class="pagina" id="arriba" src="https://es4.movietop.cc/es_manga/pic5/2/28546/757097/e6ceb6cde9578ed6229ba2da69234a14.webp?acc=bKTahAK6XbhwOE2R8PADgQ&exp=1678932922" alt="">
+        <img class="pagina" src="https://es8.movietop.cc/es_manga/pic5/2/28546/757097/03787921710a970037efe31e9f2b6998.webp?acc=gjElMrKvR_252jgEVTAIJA&exp=1678932922" alt="">
+        <img class="pagina" src="https://es3.movietop.cc/es_manga/pic5/2/28546/757097/38d5c9e6ea8ead1ba673e0212e1ee2fb.webp?acc=8KoLC0kgNh0oEPE9ma0uKQ&exp=1678932922" alt="">
+        <img class="pagina" src="https://es11.movietop.cc/es_manga/pic5/2/28546/757097/91df7a7b84f19ed9b5a1858b7e318e75.webp?acc=x-MP2HOZDiDXY3tr7TndSQ&exp=1678932922" alt="">
+        <img class="pagina" src="https://es6.movietop.cc/es_manga/pic5/2/28546/757097/a0def054ef84ac2784ea52baee05d95f.webp?acc=ZuQPPlV01nXLfGrEU5N6_w&exp=1678932922" alt="">
+        <img class="pagina" src="https://es12.movietop.cc/es_manga/pic5/2/28546/757097/48c3ec5c3a93a9e294a8a6392ccedeb4.webp?acc=OikDasAiKgodiPY2IPYv4g&exp=1678932922" alt="">
+        <img class="pagina" src="https://es2.movietop.cc/es_manga/pic5/2/28546/757097/1ca9f84e0314259ddb072fba15e42061.webp?acc=8CRqWtcLQ08DV9IWVAmmAA&exp=1678932922" alt="">
+        <img class="pagina" src="https://es11.movietop.cc/es_manga/pic5/2/28546/757097/d6623790e6c5ecbbd823c3bbd576cb3e.webp?acc=XkDUo57nKhrFU8Mmzt_EYw&exp=1678932922" alt="">
+        <img class="pagina" src="https://es5.movietop.cc/es_manga/pic5/2/28546/757097/23ebca565209046cdb224bf57a0ff105.webp?acc=p_YlevBbdPdshkJrs-xM2w&exp=1678932922" alt="">
+        <img class="pagina" src="https://es10.movietop.cc/es_manga/pic5/2/28546/757097/49e75662bca429cc0e0ee3597a1becce.webp?acc=kjEuo875w2VH7HeTkcnSzg&exp=1678932922" alt="">
+        
+        <img class="pagina" src="https://es3.movietop.cc/es_manga/pic5/2/28546/757097/cbb17d156992c352039cdc7374e915a6.webp?acc=onYgDPA4H8DF4q2rvnhGpg&exp=1678932922" alt="">
+        <img class="pagina" src="https://es11.movietop.cc/es_manga/pic5/2/28546/757097/6f1a71c03db3033cca87eadab79b8b13.webp?acc=ax32MDK3Ae7OPhytpytxaw&exp=1678932922" alt="">
 
     </main>
 
