--- a/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap20.html
+++ b/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap20.html
@@ -78,26 +78,19 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/19.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/20/20.jpg" alt="">
+        <img class="pagina" id="arriba" src="https://es10.movietop.cc/es_manga/pic5/2/28546/759816/b3b35df56a1ad6470baff5b89997461c.webp?acc=gzS-VDIbzmjP-13HslmRDg&exp=1678935478" alt="">
+        <img class="pagina" src="https://es2.movietop.cc/es_manga/pic5/2/28546/759816/e7aaa4e3c27aa62bd7551306c369e9cd.webp?acc=Q3z5XbAgbyb7DqqQf5fDhw&exp=1678935478" alt="">
+        <img class="pagina" src="https://es12.movietop.cc/es_manga/pic5/2/28546/759816/8933cd65695f1006c37cb0c2f926d621.webp?acc=5FuQ6wE1PZIq2l4_96IMvg&exp=1678935478" alt="">
+        <img class="pagina" src="https://es14.movietop.cc/es_manga/pic5/2/28546/759816/4ecca9950b8e48cca47014655c2c4789.webp?acc=BDcU3pjIKJZfwGgtpyDasg&exp=1678935478" alt="">
+        <img class="pagina" src="https://es3.movietop.cc/es_manga/pic5/2/28546/759816/7ef529d930bb7df2d3edbf7f4664f705.webp?acc=WeunkxsG6K5GWvLYwMTEzg&exp=1678935478" alt="">
+        <img class="pagina" src="https://es9.movietop.cc/es_manga/pic5/2/28546/759816/a78ea664e2643a7f2e51ef826c077ab2.webp?acc=mMpup3M--H4zrrp8Eno-8w&exp=1678935478" alt="">
+        <img class="pagina" src="https://es2.movietop.cc/es_manga/pic5/2/28546/759816/eefaa458dc4335640f68e77acbbc1268.webp?acc=QJc6Oo6MyLP8R6tMxzCLXg&exp=1678935478" alt="">
+        <img class="pagina" src="https://es8.movietop.cc/es_manga/pic5/2/28546/759816/d4a34a9d31ae0f563a48c5330167d80a.webp?acc=ARHt3tchbYr84f9f6NAqWA&exp=1678935478" alt="">
+        <img class="pagina" src="https://es13.movietop.cc/es_manga/pic5/2/28546/759816/9f4241002d82d931ad8c5cec67f17e9a.webp?acc=e_oHogayZxDNzVDyfwjEVA&exp=1678935478" alt="">
+        <img class="pagina" src="https://es13.movietop.cc/es_manga/pic5/2/28546/759816/0c52fe90a6eedf614da3c5515a78175e.webp?acc=bpumq90xPxcvI-aN0Iw58Q&exp=1678935478" alt="">
+
+        <img class="pagina" src="https://es15.movietop.cc/es_manga/pic5/2/28546/759816/60269684dcc2544720d5d001fb279daf.webp?acc=_NkZB-l8wMsjKU-Jzcfuxg&exp=1678935478" alt="">
+
     </main>
 
     <!-- Footer pag sim -->
