--- a/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap4.html
+++ b/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap4.html
@@ -78,26 +78,18 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/19.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/20.jpg" alt="">
+        <img class="pagina" id="arriba" src="https://es9.movietop.cc/es_manga/pic5/2/28546/757181/71b0dcd00742c99d780a7bfd6256a0b5.webp?acc=xmA2MiJEEkN4usc5bEqMhA&exp=1678933218" alt="">
+        <img class="pagina" src="https://es5.movietop.cc/es_manga/pic5/2/28546/757181/9cfe7097cc936bf5e8ffa224c7231653.webp?acc=8m53HZT_3fFTtD0TLECDDQ&exp=1678933218" alt="">
+        <img class="pagina" src="https://es4.movietop.cc/es_manga/pic5/2/28546/757181/675e652a358f53f87a3f89c06a6e8692.webp?acc=GH_JtW7qtni-Z97zrVKxdw&exp=1678933218" alt="">
+        <img class="pagina" src="https://es8.movietop.cc/es_manga/pic5/2/28546/757181/86fb4d9e1de18ebdb6fc534de828d605.webp?acc=jskQLuDULd5HiRH0I-Tn4g&exp=1678933218" alt="">
+        <img class="pagina" src="https://es6.movietop.cc/es_manga/pic5/2/28546/757181/d8225f2d417b2db0cc922fc02aedf369.webp?acc=Bisfj0BLa3ar0zIT9Dg7rA&exp=1678933218" alt="">
+        <img class="pagina" src="https://es6.movietop.cc/es_manga/pic5/2/28546/757181/5e78602683022b98ac7fa53d30f93558.webp?acc=klpOX_N_D3f9UXUXNB__6Q&exp=1678933218" alt="">
+        <img class="pagina" src="https://es2.movietop.cc/es_manga/pic5/2/28546/757181/dfce7d6d89ecb0e319bba7219d4addb8.webp?acc=7tE7oJ84utEHVId54KsXzg&exp=1678933218" alt="">
+        <img class="pagina" src="https://es3.movietop.cc/es_manga/pic5/2/28546/757181/4aa4ea2242e37a3ccc67f8516fb21ecd.webp?acc=7SQyFzIGm23QL2EhzXKOOw&exp=1678933218" alt="">
+        <img class="pagina" src="https://es7.movietop.cc/es_manga/pic5/2/28546/757181/f6a0809b7f72d3310dc58ff04b5fadd8.webp?acc=yXoPChmSYhSZaD_GeDMZVw&exp=1678933218" alt="">
+        <img class="pagina" src="https://es6.movietop.cc/es_manga/pic5/2/28546/757181/13fdf5cb75985771d5caef11c8551248.webp?acc=j1k7pNX-2Svi627KHJabXw&exp=1678933218" alt="">
+
+        <img class="pagina" src="https://es11.movietop.cc/es_manga/pic5/2/28546/757181/ab1f3ca10acd4b12e5706b77e36cdd5d.webp?acc=4nMJEmzVFwHyAkzdIahgRw&exp=1678933218" alt="">
     </main>
 
     <!-- Footer pag sim -->
