--- a/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap5.html
+++ b/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap5.html
@@ -78,27 +78,20 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/19.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/20.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/21.jpg" alt="">
+        <img class="pagina" id="arriba" src="https://es3.movietop.cc/es_manga/pic5/2/28546/757463/633b67b962433fc787e9ed2039392aba.webp?acc=-gdkJOpT_-uqq6T5WftFgw&exp=1678933541" alt="">
+        <img class="pagina" src="https://es4.movietop.cc/es_manga/pic5/2/28546/757463/64d66ac279dff5b6d3936ee5d751ebc5.webp?acc=AU0OrPGnEE8b9-3hT_-BNg&exp=1678933541" alt="">
+        <img class="pagina" src="https://es4.movietop.cc/es_manga/pic5/2/28546/757463/170ac27a4e872f75e9201e2b6990f383.webp?acc=D7Rd-zvXWf0rvFxzMNtyYA&exp=1678933541" alt="">
+        <img class="pagina" src="https://es11.movietop.cc/es_manga/pic5/2/28546/757463/7a4a9663f4e919c9d869cc8ee1d8743a.webp?acc=cKJ3BX_FXltp8apYTSVZTA&exp=1678933541" alt="">
+        <img class="pagina" src="https://es14.movietop.cc/es_manga/pic5/2/28546/757463/1c34b2e86eacc79f7b3c7d6902d1388c.webp?acc=cI-lIC-fjzpRWsjEGnAV_A&exp=1678933541" alt="">
+        <img class="pagina" src="https://es8.movietop.cc/es_manga/pic5/2/28546/757463/f2ee555e877c9bd7239e2a2d4e5c4f25.webp?acc=EFjAgrXsQLVI6gfqAJdH5w&exp=1678933541" alt="">
+        <img class="pagina" src="https://es6.movietop.cc/es_manga/pic5/2/28546/757463/af23e5e82f5d10d36024cc91efe7773f.webp?acc=YDEHXgHRQKMG2EtwMHzw8g&exp=1678933541" alt="">
+        <img class="pagina" src="https://es15.movietop.cc/es_manga/pic5/2/28546/757463/9a84a0448b11c17666c7e5db74042219.webp?acc=6ipJ9_cNxfZCX2yULjwKVA&exp=1678933541" alt="">
+        <img class="pagina" src="https://es11.movietop.cc/es_manga/pic5/2/28546/757463/c0277973332b3692beae52448f71f787.webp?acc=2WtlTFhHaxRMgqNDBhvCww&exp=1678933541" alt="">
+        <img class="pagina" src="https://es7.movietop.cc/es_manga/pic5/2/28546/757463/9a3635f9e53aa331e527125d8dce6092.webp?acc=nQ2wCQisa4r-HNHJyMzuSQ&exp=1678933541" alt="">
+
+        <img class="pagina" src="https://es11.movietop.cc/es_manga/pic5/2/28546/757463/2a58cd24bc165cc3a61ccca81ae06f63.webp?acc=B-KoJtS2cl0qtqCBM-asSg&exp=1678933541" alt="">
+
+        
     </main>
 
     <!-- Footer pag sim -->
