--- a/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap6.html
+++ b/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap6.html
@@ -78,28 +78,19 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/6/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/6/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/6/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/6/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/6/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/6/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/6/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/6/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/6/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/6/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/6/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/6/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/6/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/6/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/6/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/6/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/6/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/6/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/6/19.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/6/20.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/6/21.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/6/22.jpg" alt="">
+        <img class="pagina" id="arriba" src="https://es4.movietop.cc/es_manga/pic5/2/28546/757659/957514ded9bf2f4305765d53f10e4d08.webp?acc=HIss7mo716nfUuK8Auy6HA&exp=1678933789" alt="">
+        <img class="pagina" src="https://es10.movietop.cc/es_manga/pic5/2/28546/757659/b3587afa5b95501d61cb17b70caf98d0.webp?acc=cetuS4gGdUuS79x0tdtwKw&exp=1678933789" alt="">
+        <img class="pagina" src="https://es12.movietop.cc/es_manga/pic5/2/28546/757659/7248f12044a0790cd9933886d17234eb.webp?acc=0MXYMRfzKn9mwIHCbJTXbA&exp=1678933789" alt="">
+        <img class="pagina" src="https://es14.movietop.cc/es_manga/pic5/2/28546/757659/2e626277f946a25463ebae27f7cac1d5.webp?acc=BFl63viHwGlUCLIIU2tk7g&exp=1678933789" alt="">
+        <img class="pagina" src="https://es14.movietop.cc/es_manga/pic5/2/28546/757659/6a78daf846c77e45fb081083f2142414.webp?acc=koMvVp3gvpSg7WAaJpvJVQ&exp=1678933789" alt="">
+        <img class="pagina" src="https://es2.movietop.cc/es_manga/pic5/2/28546/757659/752d25a1f8dbfb2d656bac3094bfb81c.webp?acc=QSuCV8nugHhS7U4uS6xNDw&exp=1678933789" alt="">
+        <img class="pagina" src="https://es13.movietop.cc/es_manga/pic5/2/28546/757659/76d11e44260191381aa94c526f734b2e.webp?acc=amlhG_tRohCP5EBmp-2pGQ&exp=1678933789" alt="">
+        <img class="pagina" src="https://es6.movietop.cc/es_manga/pic5/2/28546/757659/8f3f305dd70f57cc29a32566aee47aa3.webp?acc=9vYIvW2OmhnguFwPP5WPag&exp=1678933789" alt="">
+        <img class="pagina" src="https://es10.movietop.cc/es_manga/pic5/2/28546/757659/e3a72c791a69f87b05ea7742e04430ed.webp?acc=edRcmi_I-gC0oGVz_J_VZw&exp=1678933789" alt="">
+        <img class="pagina" src="https://es14.movietop.cc/es_manga/pic5/2/28546/757659/3806734b256c27e41ec2c6bffa26d9e7.webp?acc=yz54ogjSfRulGSUHx-avwQ&exp=1678933789" alt="">
+
+        <img class="pagina" src="https://es12.movietop.cc/es_manga/pic5/2/28546/757659/735fba15cd27a45a0489108c2a2a70e9.webp?acc=DiaFMqiaRXBXuTa4ydBAfQ&exp=1678933789" alt="">
+
     </main>
 
     <!-- Footer pag sim -->
