--- a/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap7.html
+++ b/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap7.html
@@ -78,27 +78,18 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/19.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/20.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/7/21.jpg" alt="">
+        <img class="pagina" id="arriba" src="https://es12.movietop.cc/es_manga/pic5/2/28546/757891/f6dcfa1f587920a9d6523629e992f721.webp?acc=jzUMnHbG_G7a__eho_5x1A&exp=1678933960" alt="">
+        <img class="pagina" src="https://es7.movietop.cc/es_manga/pic5/2/28546/757891/9e56f08ff7b88b35ee53148e99f7d8f1.webp?acc=LTXdNvCCMXuLWsohE5JwfQ&exp=1678933960" alt="">
+        <img class="pagina" src="https://es9.movietop.cc/es_manga/pic5/2/28546/757891/6c23fdb32b57c00398f53e90a3714bd3.webp?acc=2o0NbcBrcQGeS5GGt-hZ6w&exp=1678933960" alt="">
+        <img class="pagina" src="https://es3.movietop.cc/es_manga/pic5/2/28546/757891/6d08b9ce98180c28ae1412d6af8158c3.webp?acc=8uASKC6L5OmAid66r64SOA&exp=1678933960" alt="">
+        <img class="pagina" src="https://es10.movietop.cc/es_manga/pic5/2/28546/757891/74306eef5860833e2e47ff169a73b45b.webp?acc=1F_RwF2gg673vI16RGNivA&exp=1678933960" alt="">
+        <img class="pagina" src="https://es7.movietop.cc/es_manga/pic5/2/28546/757891/92740316e784a1ffbc6263cda396b05a.webp?acc=G6FnS0V4McGLQfBUfQHQjQ&exp=1678933960" alt="">
+        <img class="pagina" src="https://es5.movietop.cc/es_manga/pic5/2/28546/757891/a9a80dd485d4058159acd75553f0d2f2.webp?acc=-Z0r-aKoh_73AbGSBN4Tig&exp=1678933960" alt="">
+        <img class="pagina" src="https://es6.movietop.cc/es_manga/pic5/2/28546/757891/b80b63c9a464460faba36bfb6b6fc861.webp?acc=j_CPhWGDfyP9L7e-xLHXsg&exp=1678933960" alt="">
+        <img class="pagina" src="https://es9.movietop.cc/es_manga/pic5/2/28546/757891/ef469da55386b89993b2b644f5ba5140.webp?acc=9ndJKj6cHEPA2Nqq6RdpAA&exp=1678933960" alt="">
+        <img class="pagina" src="https://es11.movietop.cc/es_manga/pic5/2/28546/757891/4ceabbd82a44dae58c912afb349470b5.webp?acc=YZAxd94NuzRdyFYEgOHXxQ&exp=1678933960" alt="">
+
+        <img class="pagina" src="https://es3.movietop.cc/es_manga/pic5/2/28546/757891/63f42ac10ac34b1345a62dd5e3d69c1e.webp?acc=g3MJXcvw1H2ZTW6sdT4_Ig&exp=1678933960" alt="">
     </main>
 
     <!-- Footer pag sim -->
