--- a/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap9.html
+++ b/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap9.html
@@ -78,34 +78,20 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/19.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/20.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/21.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/22.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/23.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/24.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/25.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/9/26.jpg" alt="">
-    </main>
+        <img class="pagina" id="arriba" src="https://es2.movietop.cc/es_manga/pic5/2/28546/758188/69b72154d751af98a431f0318322cfd9.webp?acc=lG7diqiv4M6bIBjmgAlKgQ&exp=1678934193" alt="">
+        <img class="pagina" src="https://es3.movietop.cc/es_manga/pic5/2/28546/758188/3906ddb42171916659bfb36440d8bab7.webp?acc=ea_7VdCfqN4ma-bB8SrqXA&exp=1678934193" alt="">
+        <img class="pagina" src="https://es2.movietop.cc/es_manga/pic5/2/28546/758188/9a4a52a6f48b0052e978996782ef7939.webp?acc=dMD_skc-nyWZAo5xKRw6Lg&exp=1678934193" alt="">
+        <img class="pagina" src="https://es12.movietop.cc/es_manga/pic5/2/28546/758188/34b9df8d0ab73f851c2950554db628f7.webp?acc=dI7mAgfRxXOlskqwzggDAA&exp=1678934193" alt="">
+        <img class="pagina" src="https://es10.movietop.cc/es_manga/pic5/2/28546/758188/583cf6a4542809a64ad14586ec00ebe0.webp?acc=ggd1iXW4beAwd64ODnsoTA&exp=1678934193" alt="">
+        <img class="pagina" src="https://es13.movietop.cc/es_manga/pic5/2/28546/758188/172d910bd9c5614bdbdcfd6b72d86982.webp?acc=z4Lr-60KLjesbmtskpzLzQ&exp=1678934193" alt="">
+        <img class="pagina" src="https://es7.movietop.cc/es_manga/pic5/2/28546/758188/f9c1a456675346ff7d0f2b8b1e7b1899.webp?acc=BvpxmhmNbDiW0ul0khto7w&exp=1678934193" alt="">
+        <img class="pagina" src="https://es7.movietop.cc/es_manga/pic5/2/28546/758188/2c5343ac475f639320f822c448fdf93d.webp?acc=EMPdyvqltnGquUi4GSBZ8Q&exp=1678934193" alt="">
+        <img class="pagina" src="https://es8.movietop.cc/es_manga/pic5/2/28546/758188/64f23f5c49adc2ed69df366cd5445781.webp?acc=-4eR77nx7ckFnPstOZaqqg&exp=1678934193" alt="">
+        <img class="pagina" src="https://es5.movietop.cc/es_manga/pic5/2/28546/758188/caac56cffdc38b4ce41d5d75b96f9323.webp?acc=9arlp0DKof1xtN40-tkOiQ&exp=1678934193" alt="">
 
+        <img class="pagina" src="https://es6.movietop.cc/es_manga/pic5/2/28546/758188/723b0bd9bf23f52c39f300986eb1d188.webp?acc=7QpJaJ76zciYPHdajxDE8A&exp=1678934193" alt="">
+    </main>
+         
     <!-- Footer pag sim -->
     <footer>
         <article id="website">
