--- a/Lenguaje_de_marcas/mangak/mangas/one-piece/cap5.html
+++ b/Lenguaje_de_marcas/mangak/mangas/one-piece/cap5.html
@@ -78,27 +78,27 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/19.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/20.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/5/21.jpg" alt="">
+        <img class="pagina" id="arriba" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
     </main>
 
     <!-- Footer pag sim -->
