--- a/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap16.html
+++ b/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap16.html
@@ -78,24 +78,17 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/16/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/16/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/16/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/16/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/16/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/16/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/16/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/16/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/16/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/16/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/16/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/16/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/16/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/16/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/16/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/16/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/16/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/16/18.jpg" alt="">
+        <img class="pagina" id="arriba" src="https://es7.movietop.cc/es_manga/pic5/2/28546/759329/4b7f7fc48c93e7b175275c5e5ac997b2.webp?acc=gsBnQ6FPnKRLVvXR_B6DsQ&amp;exp=1678935073" alt="">
+        <img class="pagina" src="https://es10.movietop.cc/es_manga/pic5/2/28546/759329/fb9484c22501f8d213e35cdcfe43387a.webp?acc=31VC4Thk_2-eOhxW4RMZkg&amp;exp=1678935073" alt="">
+        <img class="pagina" src="https://es3.movietop.cc/es_manga/pic5/2/28546/759329/c6b5447597e82209184ac3202de17b2d.webp?acc=T5HfjDPzg1JCo2oLmkupXA&amp;exp=1678935073" alt="">
+        <img class="pagina" src="https://es7.movietop.cc/es_manga/pic5/2/28546/759329/1fd4027460ea131cda5785309dc07220.webp?acc=-lybWXdFZ4fk8RX2xBkNdg&amp;exp=1678935073" alt="">
+        <img class="pagina" src="https://es8.movietop.cc/es_manga/pic5/2/28546/759329/0a809ca78b9aa5393c0cb7dad7eb6a3a.webp?acc=A05PoTS9hzOolErKYglJMg&amp;exp=1678935073" alt="">
+        <img class="pagina" src="https://es8.movietop.cc/es_manga/pic5/2/28546/759329/b541f9935c1b4824b94f71c64ee36e6c.webp?acc=ui070wb6lgQeGesACHl_Hw&amp;exp=1678935073" alt="">
+        <img class="pagina" src="https://es6.movietop.cc/es_manga/pic5/2/28546/759329/ab8df9f7733db5611fd53748f1db282e.webp?acc=g6t0m3BwVuOLxCWr2_l0Gw&amp;exp=1678935073" alt="">
+        <img class="pagina" src="https://es12.movietop.cc/es_manga/pic5/2/28546/759329/dc5a0f4116e3da12cefa79263efef33f.webp?acc=4q5867yIBepL-MMRttT07w&amp;exp=1678935073" alt="">
+        <img class="pagina" src="https://es4.movietop.cc/es_manga/pic5/2/28546/759329/3139f8dbb4af553ab05bb8d63f0db947.webp?acc=tOUL2I-n54z1JERpBGfR1A&amp;exp=1678935073" alt="">
+        <img class="pagina" src="https://es2.movietop.cc/es_manga/pic5/2/28546/759329/6a12d7ebc27cae44623468302c47ad74.webp?acc=Kx8-7XmD5iPaP7SOnS5zhw&amp;exp=1678935073" alt="">
+
     </main>
 
     <!-- Footer pag sim -->
