--- a/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap8.html
+++ b/Lenguaje_de_marcas/mangak/mangas/iron-ladies/cap8.html
@@ -78,26 +78,17 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/8/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/8/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/8/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/8/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/8/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/8/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/8/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/8/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/8/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/8/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/8/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/8/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/8/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/8/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/8/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/8/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/8/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/8/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/8/19.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/8/20.jpg" alt="">
+        <img class="pagina" id="arriba" src="https://es13.movietop.cc/es_manga/pic5/2/28546/758029/5c528e25e1fdeaf9d8160dc24dbf4d60.webp?acc=u2bOm_3Z0yNoGcWfGq_T6g&exp=1678934127" alt="">
+        <img class="pagina" src="https://es2.movietop.cc/es_manga/pic5/2/28546/758029/268b33ccfdd00ea4adda84063d34ffb0.webp?acc=2YR-pYKChsEMtqCnD7lTJQ&exp=1678934127" alt="">
+        <img class="pagina" src="https://es15.movietop.cc/es_manga/pic5/2/28546/758029/596a5705f4d9c0867ea0aba3be5db567.webp?acc=KKXsTCuUV4Wfo4U5HHuzSw&exp=1678934127" alt="">
+        <img class="pagina" src="https://es7.movietop.cc/es_manga/pic5/2/28546/758029/0b352414e83c92b3d5fa2ecdf5895e40.webp?acc=GwpfeEPPywPqN8JMeCECew&exp=1678934127" alt="">
+        <img class="pagina" src="https://es11.movietop.cc/es_manga/pic5/2/28546/758029/b04c387c8384ca083a71b8da516f65f6.webp?acc=VD37bL3qtxWIkvUlEg_iBw&exp=1678934127" alt="">
+        <img class="pagina" src="https://es3.movietop.cc/es_manga/pic5/2/28546/758029/db29450c3f5e97f97846693611f98c15.webp?acc=FX3NxEC6RbI8x9AK2w-QRA&exp=1678934127" alt="">
+        <img class="pagina" src="https://es10.movietop.cc/es_manga/pic5/2/28546/758029/05a4459d3d5c309f5ab86521d1d2bb69.webp?acc=i6R0CT6mGOkpHrTEt1FqSg&exp=1678934127" alt="">
+        <img class="pagina" src="https://es11.movietop.cc/es_manga/pic5/2/28546/758029/c712da56ef432ac2c0485556cf452be6.webp?acc=FQi97gMSmlrLI1cJKoWPrw&exp=1678934127" alt="">
+        <img class="pagina" src="https://es7.movietop.cc/es_manga/pic5/2/28546/758029/9f393794277e9179468aad98ce4eb57f.webp?acc=5DM5s68b_IJmic45vSNNGA&exp=1678934127" alt="">
+        <img class="pagina" src="https://es2.movietop.cc/es_manga/pic5/2/28546/758029/a666b3e582733d0c2a86a6e20cff5006.webp?acc=zn-IPY_64VVjRqbzL7gVcg&exp=1678934127" alt="">
+
     </main>
 
     <!-- Footer pag sim -->
