--- a/Lenguaje_de_marcas/mangak/mangas/one-piece/cap2.html
+++ b/Lenguaje_de_marcas/mangak/mangas/one-piece/cap2.html
@@ -78,29 +78,29 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/19.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/20.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/21.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/22.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/2/23.jpg" alt="">
+        <img class="pagina" id="arriba" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
 
     </main>
 
