--- a/Lenguaje_de_marcas/mangak/mangas/one-piece/cap3.html
+++ b/Lenguaje_de_marcas/mangak/mangas/one-piece/cap3.html
@@ -77,29 +77,29 @@
             <a class="atras" href="cap4.html"><i class="fa-solid fa-forward"></i></a>
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/3/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/3/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/3/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/3/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/3/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/3/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/3/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/3/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/3/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/3/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/3/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/3/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/3/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/3/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/3/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/3/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/3/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/3/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/3/19.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/3/20.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/3/21.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/3/22.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/3/23.jpg" alt="">
+        <img class="pagina" id="arriba" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
     </main>
 
     <!-- Footer pag sim -->
