--- a/Lenguaje_de_marcas/mangak/mangas/one-piece/cap4.html
+++ b/Lenguaje_de_marcas/mangak/mangas/one-piece/cap4.html
@@ -78,26 +78,26 @@
             <a class="arribaPag" href="#arriba"><i class="fa-solid fa-angle-up"></i></a>
         </section>
 
-        <img class="pagina" id="arriba" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/01.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/02.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/03.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/04.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/05.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/06.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/07.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/08.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/09.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/10.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/11.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/12.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/13.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/14.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/15.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/16.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/17.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/18.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/19.jpg" alt="">
-        <img class="pagina" src="http://heavenmanga.com/uploads/manga/one-piece/chapters/4/20.jpg" alt="">
+        <img class="pagina" id="arriba" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
+        <img class="pagina" src="https://via.placeholder.com/827x1200?text=PRUEBA" alt="">
     </main>
 
     <!-- Footer pag sim -->
