--- a/Lenguaje_de_marcas/practicas/freshIdeas/index.html
+++ b/Lenguaje_de_marcas/practicas/freshIdeas/index.html
@@ -16,7 +16,7 @@
             <!-- Navegacion -->
             <nav>
                 <ul>
-                    <li><a id="home" href="#">Home</a></li>
+                    <li id="home"><a href="#">Home</a></li>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Portfolio</a></li>
